[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features= ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"]}
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "json", "chrono", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"